complete SpaceX Lab unit-2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,38 @@
   <link rel="stylesheet" href="./style.css">
   <title>SpaceX</title>
 </head>
-<body>
-  
+<div class="hero-image">
+  <div class="header">
+    <nav id="navbar">
+      <div class="container">
+        <h1 class="logo">SpaceX</h1>
+        <ul>
+          <li>
+            <a href="#">Falcon9</a>
+          </li>
+          <li>
+            <a href="#">Falcon Heavy</a>
+          </li>
+          <li>
+            <a href="#">Starship</a>
+          </li>
+          <li>
+            <a href="#">Human Spaceflight</a>
+          </li>
+          <li>
+            <a href="#">Rideshare</a>
+          </li>
+        </ul>
+      </div>
+
+
+    </nav>
+  </div>
+  <div class="hero-text">
+    <h2>RECENT MISSION</h2>
+    <h1>TURKSAT 5A MISSION</h1>
+    <button>REPLAY</button>
+  </div>
+</div>
 </body>
 </html>
